K1J-1777: add batch for db query