@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
@@ -17,6 +18,7 @@ import static se.inera.intyg.certificateservice.domain.testdata.TestDataMessage.
 import static se.inera.intyg.certificateservice.domain.testdata.TestDataMessageConstants.MESSAGE_ID;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -372,8 +374,28 @@ class JpaMessageRepositoryTest {
   @Nested
   class FindMessagesByPatientKeyAndStatusSentAndCreatedAfter {
 
-    private static final String PATIENT_ID = "100";
+    private static final String PATIENT_ID = "191212121212";
     private static final Integer MAX_DAYS = 7;
+
+    private static CertificateMessageCountEntity createEntity(String certificateId, int complements,
+        int others) {
+      return new CertificateMessageCountEntity() {
+        @Override
+        public String getCertificateId() {
+          return certificateId;
+        }
+
+        @Override
+        public Integer getComplementsCount() {
+          return complements;
+        }
+
+        @Override
+        public Integer getOthersCount() {
+          return others;
+        }
+      };
+    }
 
     @Test
     void shallReturnEmptyListWhenNoMessagesFound() {
@@ -389,22 +411,7 @@ class JpaMessageRepositoryTest {
 
     @Test
     void shallReturnMessageWhenOneMessageFound() {
-      final var entity = new CertificateMessageCountEntity() {
-        @Override
-        public String getCertificateId() {
-          return "cert123";
-        }
-
-        @Override
-        public Integer getComplementsCount() {
-          return 5;
-        }
-
-        @Override
-        public Integer getOthersCount() {
-          return 1;
-        }
-      };
+      final var entity = createEntity("cert123", 5, 1);
 
       when(messageEntityRepository.getMessageCountForCertificates(
           List.of(PATIENT_ID), MAX_DAYS))
@@ -421,39 +428,8 @@ class JpaMessageRepositoryTest {
 
     @Test
     void shallReturnMultipleMessagesWhenMultipleMessagesFound() {
-      final var entity1 = new CertificateMessageCountEntity() {
-        @Override
-        public String getCertificateId() {
-          return "cert123";
-        }
-
-        @Override
-        public Integer getComplementsCount() {
-          return 5;
-        }
-
-        @Override
-        public Integer getOthersCount() {
-          return 1;
-        }
-      };
-
-      final var entity2 = new CertificateMessageCountEntity() {
-        @Override
-        public String getCertificateId() {
-          return "cert456";
-        }
-
-        @Override
-        public Integer getComplementsCount() {
-          return 3;
-        }
-
-        @Override
-        public Integer getOthersCount() {
-          return 2;
-        }
-      };
+      final var entity1 = createEntity("cert123", 5, 1);
+      final var entity2 = createEntity("cert456", 3, 2);
 
       when(messageEntityRepository.getMessageCountForCertificates(
           List.of(PATIENT_ID), MAX_DAYS))
@@ -463,9 +439,9 @@ class JpaMessageRepositoryTest {
           List.of(PATIENT_ID), MAX_DAYS);
 
       assertEquals(2, result.size());
-      assertEquals("cert123", result.get(0).certificateId());
-      assertEquals(5, result.get(0).complementsCount());
-      assertEquals(1, result.get(0).othersCount());
+      assertEquals("cert123", result.getFirst().certificateId());
+      assertEquals(5, result.getFirst().complementsCount());
+      assertEquals(1, result.getFirst().othersCount());
       assertEquals("cert456", result.get(1).certificateId());
       assertEquals(3, result.get(1).complementsCount());
       assertEquals(2, result.get(1).othersCount());
@@ -483,6 +459,55 @@ class JpaMessageRepositoryTest {
       verify(messageEntityRepository).getMessageCountForCertificates(
           List.of(PATIENT_ID), MAX_DAYS);
     }
+
+    @Test
+    void shallHandleBatchingWhenPatientIdsLessThanBatchSize() {
+      final var patientIds = List.of("1", "2", "3", "4", "5");
+      final var entity = createEntity("cert123", 1, 1);
+
+      when(messageEntityRepository.getMessageCountForCertificates(
+          patientIds, MAX_DAYS))
+          .thenReturn(List.of(entity));
+
+      final var result = jpaMessageRepository.findCertificateMessageCountByPatientKeyAndStatusSentAndCreatedAfter(
+          patientIds, MAX_DAYS);
+
+      assertEquals(1, result.size());
+      verify(messageEntityRepository, times(1)).getMessageCountForCertificates(
+          patientIds, MAX_DAYS);
+    }
+
+    @Test
+    void shallHandleBatchingWithMultipleFullBatches() {
+      final var patientIds = new ArrayList<String>();
+      for (int i = 1; i <= 2001; i++) {
+        patientIds.add(String.valueOf(i));
+      }
+
+      final var entity1 = createEntity("cert123", 1, 1);
+      final var entity2 = createEntity("cert456", 2, 2);
+      final var entity3 = createEntity("cert1001", 2, 6);
+
+      when(messageEntityRepository.getMessageCountForCertificates(
+          patientIds.subList(0, 1000), MAX_DAYS))
+          .thenReturn(List.of(entity1));
+      when(messageEntityRepository.getMessageCountForCertificates(
+          patientIds.subList(1000, 2000), MAX_DAYS))
+          .thenReturn(List.of(entity2));
+      when(messageEntityRepository.getMessageCountForCertificates(
+          patientIds.subList(2000, 2001), MAX_DAYS))
+          .thenReturn(List.of(entity3));
+
+      final var result = jpaMessageRepository.findCertificateMessageCountByPatientKeyAndStatusSentAndCreatedAfter(
+          patientIds, MAX_DAYS);
+
+      assertEquals(3, result.size());
+      verify(messageEntityRepository, times(1)).getMessageCountForCertificates(
+          patientIds.subList(0, 1000), MAX_DAYS);
+      verify(messageEntityRepository, times(1)).getMessageCountForCertificates(
+          patientIds.subList(1000, 2000), MAX_DAYS);
+      verify(messageEntityRepository, times(1)).getMessageCountForCertificates(
+          patientIds.subList(2000, 2001), MAX_DAYS);
+    }
   }
 }
-
